window.SIDEBAR_ITEMS = {"constant":["FILE_DESCRIPTOR_SET"],"mod":["grpc_client","grpc_server","send_blocks_response","send_endorsements_response","send_operations_response"],"struct":["Block","BlockHeader","BlockInfo","BlockInfoContent","BlockResult","BytesMapFieldEntry","CallSc","DatastoreEntryFilter","Endorsement","EndorsementContent","EndorsementId","EndorsementInfo","EndorsementResult","ExecuteSc","FilledBlock","FilledBlockInfo","FilledBlockInfoContent","GetDatastoreEntriesRequest","GetDatastoreEntriesResponse","GetVersionRequest","GetVersionResponse","OperationId","OperationInfo","OperationInput","OperationResult","OperationType","Roll","RollBuy","RollSell","SecureShareBlockHeader","SecureShareEndorsement","SecureShareOperation","SecureSharePayload","SendBlocksRequest","SendBlocksResponse","SendEndorsementsRequest","SendEndorsementsResponse","SendOperationsRequest","SendOperationsResponse","Slot","Transaction","Version"]};